[package]
name = "chainstate"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", features = [ "attributes" ] }
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = { version = "1.0" }
ureq = { version = "2.1", features = ["json", "charset"] }
base64 = { version = "0.13" }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
bigdecimal = { version = "0.2" }
cached = { version = "0.23" }
async-trait = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }