[package]
name = "chainstate"
version = "0.1.0"
authors = ["EnormousCloud"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0" }
async-std = { version = "1.6", features = [ "attributes" ] }
async-trait = { version = "0.1" }
base64 = { version = "0.13" }
bigdecimal = { version = "0.2" }
bytes = { version = "1", features = ["serde"] }
cached = { version = "0.23" }
ethereum-types = { version = "0.11" }
hex = "0.4"
hex-literal = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
structopt = { version = "0.3", default-features = false }
tide = { version = "0.16", default-features = false, features = ["h1-server"] }
tracing = { version = "0.1" }
tracing-futures =  { version = "0.2" }
tracing-subscriber = { version = "0.2" }
rand = { version = "0.8" }
ureq = { version = "2.1", features = ["json", "charset"] }